media: Enable external clear key renewal test using mojo CDM

According to the EME spec, during update(), expiration should be updated
before resolving the update() promise.

BUG=730762
TEST=Fixes and enables a test case.

Change-Id: I145f707aee8cbc53413417654282dafe6edc9f28
Reviewed-on: https://chromium-review.googlesource.com/567873
Reviewed-by: John Rummell <jrummell@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486137}
Former-commit-id: b3db7e610c7fc02f50b011182621271beaae3464