chrome/browser/media/encrypted_media_browsertest.cc
@@ -778,12 +778,6 @@ IN_PROC_BROWSER_TEST_P(ECKEncryptedMediaTest, PlatformVerificationTest) {
 }
 
 IN_PROC_BROWSER_TEST_P(ECKEncryptedMediaTest, Renewal) {
-  // TODO(xhwang): Fix renewal time. See http://crbug.com/730762
-  if (IsUsingMojoCdm()) {
-    DVLOG(0) << "Skipping test; Not working with mojo CDM yet.";
-    return;
-  }
-
   TestPlaybackCase(kExternalClearKeyRenewalKeySystem, kNoSessionToLoad, kEnded);
 }
 
